Finalizado as informações dos mangas

--- a/Vision/static/css/list-manga.css
+++ b/Vision/static/css/list-manga.css
@@ -21,7 +21,7 @@
 }
 
 #az-order li span {
-    background: rgb(168, 238, 89);
+    background: #a8ee59;
     border-radius: 5px 5px 5px 5px;
     color: #000000;
     cursor: pointer;
